--- a/frontend/src/app/components/landing-tests/german-test/german-test.component.css
+++ b/frontend/src/app/components/landing-tests/german-test/german-test.component.css
@@ -66,6 +66,23 @@ p {
   background-color: #F1F8FF;
   padding: 15px;
   border-radius: 10px;
+  position: relative;
+}
+
+.invalid-radio {
+  color: red;
+}
+
+.testResult {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.trophy-img {
+  height: auto;
+  width: 130px;
 }
 
 
