--- a/frontend/src/app/components/landing/landing.component.html
+++ b/frontend/src/app/components/landing/landing.component.html
@@ -452,7 +452,7 @@
 </section>
 
 <!-- Contact section -->
-<section class="section-wrapper">
+<section class="section-wrapper" id="contact-section">
   <div id="contact-form-section">
     <div id="contact-card">
       <div id="contact-background">
@@ -591,7 +591,7 @@
           </fieldset>
 
           <!-- Contact field -->
-          <fieldset class="">
+          <fieldset>
             <select
               formControlName="contactOption"
               [class.is-invalid]="
