--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -24,6 +24,7 @@
 :root {
   --dark-blue: #000d83;
   --light-blue: #f1f8ff;
+  --purple: #dbcafc;
   --shadow: 5px 5px 5px 0px rgba(0, 0, 0, 0.3);
 }
 
@@ -62,4 +63,39 @@ ngx-intl-tel-input.is-invalid>.iti>input:focus {
 
 .iti .dropdown-menu.country-dropdown {
   font-size: 15px
+}
+
+.avatar {
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 3px solid #c0a5f6;
+  cursor: pointer;
+}
+
+.fc-col-header-cell-cushion {
+  color: var(--dark-blue);
+  font-size: 20px;
+  text-decoration: none;
+}
+
+.fc .fc-button-group>.fc-button.fc-button-active,
+.fc .fc-button-group>.fc-button:active,
+.fc .fc-button-group>.fc-button:focus {
+  background-color: rgb(14, 82, 14);
+}
+
+:root {
+  --fc-today-bg-color: rgb(203, 249, 203);
+}
+
+.fc-day-today {
+  background-color: rgb(203, 249, 203);
+}
+
+.fc .fc-timegrid-now-indicator-line {
+  opacity: .6;
+  border-color: red;
+  border-width: 4px 0 0;
 }
